--- a/TweetBell.xcodeproj/xcshareddata/xcschemes/TweetBell.xcscheme
+++ b/TweetBell.xcodeproj/xcshareddata/xcschemes/TweetBell.xcscheme
@@ -68,7 +68,7 @@
          </EnvironmentVariable>
       </EnvironmentVariables>
       <LocationScenarioReference
-         identifier = "Tokyo, Japan"
+         identifier = "San Francisco, CA, USA"
          referenceType = "1">
       </LocationScenarioReference>
    </LaunchAction>
